styles/solar-solutions.css
.solar-solutions {
  display: flex;
  padding: 5rem 9.375rem;
  flex-direction: column;
  align-items: center;
  gap: 2.5rem;
}

/************************* Solar Solutions Text *************************/
.solar-solutions-text {
  display: flex;
  width: 58.5rem;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.solar-solutions-text h1 {
  color: #101828;
  text-align: center;
  font-size: 2.625rem;
  font-weight: 600;
  letter-spacing: -0.0525rem;
}

.solar-solutions-text p {
  color: #475467;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

/************************* Solar Solutions Cards *************************/
.solar-solutions-cards {
  display: flex;
  max-width: 71.25rem;
  align-items: flex-start;
  gap: 2rem;
}

.solar-solutions-card {
  display: flex;
  width: 22.4375rem;
  flex-direction: column;
  align-items: flex-start;
  background: #fff;
  box-shadow: 0rem .25rem 1.875rem 0rem rgba(0, 0, 0, 0.05);
}

.solar-solutions-card > img {
  height: 15rem;
}

.card-content {
  display: flex;
  padding: 1.25rem;
  flex-direction: column;
  align-items: flex-start;
  gap: 1.5rem;
}

.card-content h3 {
  color: #101828;
  font-size: 1.25rem;
  font-weight: 600;
  line-height: 1.875rem;
}

.card-content p {
  height: 4.5rem;
  width: 20.4375rem;
  color: #475467;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  text-overflow: ellipsis;
}

.card-content button {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: .5rem;
}

.card-content button span {
  color: #3cab90;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5rem;
}

.card-content button:hover span {
  text-shadow: 0rem 0rem .3125rem #55eec8;
}

.card-content button img {
  width: 1.25rem;
  height: 1.25rem;
}

/************************* Media Queries *************************/
/* Media Query for Mobile Devices */
@media (max-width: 1250px) {
  .solar-solutions {
    padding: 1rem 1.5625rem;
  }
}

@media (max-width: 1200px) {
  .solar-solutions-cards {
    flex-wrap: wrap;
    justify-content: space-evenly;
  }
}

@media screen and (max-width: 1100px) {
  .solar-solutions-text {
    width: 100%;
  }
}

@media screen and (max-width: 750px) {
  .solar-solutions {
    padding: 0.5rem 0.75rem;
  }

  .solar-solutions-card {
    width: auto;
  }

  .card-content {
    padding: 1rem;
  }

  .card-content p {
    width: 100%;
  }
}

